# bdd-living-doc

./: .gitignore  README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Cargo.toml
backend/src/: file_watcher.rs  main.rs  parser.rs  websocket.rs
feature-files/: login.feature  purchase.feature
frontend/: astro.config.mjs  package.json  pnpm-lock.yaml
frontend/src/components/: FeatureItem.tsx  FeatureList.tsx  ScenarioItem.tsx  StepItem.tsx
frontend/src/layouts/: MainLayout.astro
frontend/src/pages/: index.astro
