[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
notify = "6.1.1"
gherkin = { version = "0.14", features = ["serde"] }
actix-ws = "0.3.0"
lazy_static = "1.5.0"
futures-util = { version = "0.3", features = ["sink"] }
bytestring = "1.3.1"
actix-cors = "0.6"
